objects/QaObj2__c.object
<CustomObject>
    <fields>
        <fullName>AccountLookupField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add Dexcription</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj2s</relationshipLabel>
        <relationshipName>QaObj2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountMasterField1__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj2s (Account)</relationshipLabel>
        <relationshipName>QaObj2s1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Email</type>
    </fields>
    <label>QaObj2</label>
    <nameField>
        <label>QaObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QaObj2s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>